Using constructor and export class

--- a/javascript_basic_exercises/index.html
+++ b/javascript_basic_exercises/index.html
@@ -7,5 +7,5 @@
 </head>
 <body></body>
 <!--This script line is used to run file in website through html code-->
-<script src="calculate_sum_of_1_to_n.js"></script>
+<script src="create_user_and_view_data.js"></script>
 </html>
