Addec classes and objects

--- a/javascript_learning_files/index.html
+++ b/javascript_learning_files/index.html
@@ -6,5 +6,5 @@
     <title>Document</title>
 </head>
 <body></body>
-<script src="beginner_file_2.js"></script>
+<script src="class_and_objects.js"></script>
 </html>
